fix: add correct row gap to games section

--- a/app/ui/general/Games.module.css
+++ b/app/ui/general/Games.module.css
@@ -31,6 +31,8 @@
   color: white;
   display: flex;
   gap: 0.5rem;
+  flex-wrap: wrap;
+  row-gap: normal;
 }
 
 .dlcUncomplete {
